fix: minor grammar change

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -12,6 +12,8 @@ metaTitle: Create and fund accounts
 
 In this tutorial, you will learn how to claim test ada tokens on the main chain testnet.
 
+*Note: This is a dedicated Cardano testnet seperate from Preview or Preprod testnets.*
+
 ## Generating keys
 
 To generate keys for the Cardano testnet you need the `cardano-cli` [binary](https://github.com/input-output-hk/cardano-node/releases/).
@@ -39,7 +41,7 @@ Request test ada using [the web-app](https://faucet.cardano.evmtestnet.iohkdev.i
 
 # How to fund your sidechain account with test SC_token
 
-Create a sidechain account using a compatible Web3 connected to the EVM sidechain test network (MetaMask), 
+Create a sidechain account using a compatible Web3 connected to the EVM sidechain test network (ex: MetaMask), 
 1a. or using `evm-sc-cli`: https://github.com/input-output-hk/sidechains-tooling
 
 ```shell
